# azure_llm_app_demo

./: .env  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  rag_langchain_demo.ipynb
.github/: copilot-instructions.md
.github/workflows/: main_bi-lytixjunior.yml
src/: __init__.py
src/core/: config.py  exceptions.py  local_rag.py  logging_server.py  openai_utils.py
src/server/: __init__.py  sticky_notes.py
