[tool.poetry]
name = "bi-lytix-junior-azure-demo"
version = "0.1.0"  # Replace with the actual version if known
description = "Bi-lytix Demo for a simple Azure LLM Application"
authors = ["Bi-lytix"]
maintainers = [
    "Robert Binder <robert.rothschaedl@hotmail.com>",
]
license = "MIT"
keywords = ["git", "mcp", "llm", "automation", "data analytics", "Bi-lytix", "azure", "foundry"]
readme = "README.md"
repository = "https://github.com/RoBiApps007/azure_llm_app_demo.git"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
packages = [
    { include = "core", from = "src" },
    { include = "server", from = "src" },
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13"
mcp = { version = "*", extras = ["cli"] }
httpx = "*"
numpy = "*"
pandas = "*"
scipy = "*"
python-dotenv = "*"
pydantic = "*"
pydantic-settings = "*"
pydantic_core = "*"
langchain = "*"
langchain-anthropic = "*"
langchain-openai = "*"
langchain-chroma = "*"
langchain-community = "*"
langchain-core = "*"
langchain-text-splitters = "*"
openai = "^1.0.0"
anthropic = "*"
chromadb = "*"
streamlit = "*"
fastapi = "*"
requests = "*"
typer = "*"
jupyter_client = "*"
jupyter_core = "*"
ipykernel = "*"
pypdf = "*"
docx2txt = "*"
bs4 = "*"
azure-identity = "*"
azure-mgmt-resource = "*"
azure-mgmt-costmanagement = "*"
azure-mgmt-authorization = "*"

[tool.poetry.extras]
rich = ["rich"]
cli = ["typer", "python-dotenv"]
ws = ["websockets"]

[tool.poetry.scripts]
notes_server = "src.server.sticky_notes:main"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
black = "*"
mypy = "*"
ruff = "*"
isort = "*"
pre-commit = "*"
commitizen = "*"
bandit = {extras = ["toml"], version = "*"}
detect-secrets = "*"
types-pyyaml = "*"
types-markdown = "*"
tomli = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"

# Black configuration
[tool.black]
line-length = 100
skip-string-normalization = false  # Ensure consistent formatting
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_optional = true
strict_equality = true
ignore_missing_imports = false
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Ruff configuration
[tool.ruff]
line-length = 100
exclude = [
    ".git",
    ".tox",
    ".venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F841", "F401"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/mcp_script_suggester",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.isort]
profile = "black"
line_length = 100

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "venv"]
skips = ["B101", "B601"]

# Interrogate docstring coverage
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build", "tests"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".tox", ".venv", ".eggs", "*.egg", "build", "dist", ".mypy_cache"]
